# NotesAppCDK

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  cdk.json  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: endpoints.py
infra/: cdk_app.py
infra/stacks/: my_stack.py
src/models/: note_models.py
src/note_app/: main.py
src/note_app/api/v1/: endpoints.py
src/note_app/api/v1/clients/: aws_client.py
tests/: test_endpoints.py
